--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
  console.log("clicked");
  cordova.plugins.barcodeScanner.scan(function(result){
  //success callback
- alert(JSON.stringify(result));
+ //alert(JSON.stringify(result));
+  alert(result);
 
  },function(error){
  //error callback
