--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  cordova.plugins.barcodeScanner.scan(function(result){
  //success callback
  //alert(JSON.stringify(result));
-  alert(result);
+  alert(result.text);
 
  },function(error){
  //error callback
